Display badge on side and fix display of extra score

--- a/SinglePage/templates/cards/imi_main.html
+++ b/SinglePage/templates/cards/imi_main.html
@@ -1,7 +1,14 @@
+{% load static %}
 <div class="container" id="card11" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
            Questionnaire 2
+            <div class="sticky11 fixed-header" style="top: 86px">
+                <p style="text-align: center;">Badges</p>
+                <img src="{% static "img/silverBadge.png" %}" alt="" width="80">
+                <br>
+                <img src="{% static "img/goldBadge.png" %}" alt="" width="80">
+            </div>
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
