--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -312,3 +312,9 @@ h1.likert-header {
         top: 0 !important;
     }
 }
+
+/* Badge */
+.badge_icon{
+    max-width: 100%;
+    max-height: 100%;
+}
