Rework badge style on fix modal not showing on mobile

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -38,12 +38,12 @@
         {% endif %}
         {% if framing == 1 %}
             You were in the positive framing condition. This means that you were presented with the positive statement:
-            "Very good, that’s an excellent beginning. In the last round, your performance has exceeded our expectations.
+            "Very good, that’s an excellent beginning. In this round, your performance has exceeded our expectations.
             You’ll surely do well in the next round!"
         {% endif %}
         {% if framing == 2 %}
             You were in the negative framing condition. This means that you were presented with the negative statement:
-            "Well, that’s a start. In the last round, your performance was not what we expected.
+            "Well, that’s a start. In this round, your performance was not what we expected.
             Hopefully you can do a little better in the next round!."
         {% endif %}
     </p>
