--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -37,7 +37,7 @@
 {#                    <b style="color: #006dcc; font-size: 21px">7 out of 8</b> tasks <b>correct</b>#}
 {#                    <br>#}
                         Very good, that’s an excellent beginning.
-                        In the last round, your performance has exceeded our expectations.<br>
+                        In this round, your performance has exceeded our expectations.<br>
                         You’ll surely do well in the next round!
                 {% endif %}
                 {% if framing == 2 %}
@@ -47,7 +47,7 @@
 {#                    <b style="color: #006dcc; font-size: 21px">2 out of 8</b> tasks <b>correct</b>#}
 {#                    <br>#}
                         Well, that’s a start.
-                        In the last round, your performance was not what we expected. <br>
+                        In this round, your performance was not what we expected. <br>
                         Hopefully you can do a little better in the next round!
                 {% endif %}
             </p>
