Finish badge view for mobile

--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -335,44 +335,19 @@ h1.likert-header {
     #sticky_badge {
         display: none;
     }
-}
-
-@media only screen and (min-width: 850px) {
-    #sticky_badge {
-       top: 84px;
+    #fixed_footer_badge {
+        height: 40px;
+        position: fixed;
+        bottom:0;
+        left:0;
+        right: 0;
+        background-color: #004B8B;
     }
 }
 
-/*.sticky {*/
-/*  position: sticky;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  height: calc(100% - 1px);*/
-/*  width: calc(100% - 1px);*/
-/*  float: left;*/
-/*  pointer-events: none;*/
-/*}*/
+@media only screen and (min-width: 850px) {
+    #fixed_footer_badge {
+        display: none;
+    }
 
-/*.overlay {*/
-/*  position: absolute;*/
-/*  left: 50%;*/
-/*  top: 50%;*/
-/*  transform: translate3d(-50%, -50%, 0);*/
-/*  white-space: nowrap;*/
-/*  padding: 12px;*/
-/*  border-radius: 8px;*/
-/*  border: none;*/
-/*  background: pink;*/
-/*  outline: none;*/
-/*  transition: background .3s;*/
-/*}*/
-
-#info {
-    /*height: 40px;*/
-    position: fixed;
-    bottom:0%;
-    width:100%;
-    background-color: #393838;
-    /*opacity: 1;*/
 }
-
