--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -128,15 +128,10 @@
                 <div>
                     Cognitive Ability Tasks
                 </div>
-                <div id="sticky_badge" class="sticky10 fixed-header">
+                <div id="sticky_badge" class="sticky10 fixed-header" style="top:84px">
                     <p style="text-align: center;">Badges</p>
                     <img src="{% static "img/silverBadge.png" %}" alt=""  width="80">
                 </div>
-{#                 <div class="sticky">#}
-{#                    <div class="overlay">#}
-{#                      I'm like fixed inside scrolling container!#}
-{#                    </div>#}
-{#                 </div>#}
             </div>
         </div>
         <div class="progress">
@@ -204,6 +199,10 @@
                 </div>
             </div>
         </div>
+        <div id="fixed_footer_badge" class="text-white">
+            <div style="margin-left: 2%">Badges:
+                <img src="{% static "img/silverBadge.png" %}" alt="" width="40px" >
+            </div>
+        </div>
     </div>
-<div id="info">Scroll for info</div>
 </div>
