--- a/SinglePage/templates/finish.html
+++ b/SinglePage/templates/finish.html
@@ -7,13 +7,13 @@
                 Finished Study
             </div>
             <div class="card-body">
-                <p class="card-text">You have already successfully participated in and completed this study.
+                <p class="card-text">You have successfully participated in and completed this study.
                     <br> Thank you for your participation!
                 </p>
             </div>
-            <div class="modal-footer" id="finish">
-                <a href="https://app.prolific.co/submissions/complete?cc=4FED7A67" class="btn btn-primary">Return to prolific</a>
-            </div>
+{#            <div class="modal-footer" id="finish">#}
+{#                <a href="https://app.prolific.co/submissions/complete?cc=4FED7A67" class="btn btn-primary">Return to prolific</a>#}
+{#            </div>#}
         </div>
 </div>
 {% endblock %}
