--- a/SinglePage/templates/scripts.html
+++ b/SinglePage/templates/scripts.html
@@ -249,10 +249,15 @@ function saveExtraTask(){
     {#Continue if all answered#}
     if (missing_answr === "false"){
         document.getElementById('errorExtra'+taskID).innerHTML = "";
-        displayNextTask();
 
         {#Save answers in DB#}
         let xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200){
+                console.log("test");
+                    displayNextTask();
+            }
+        }
         xhr.open("POST", '/website/saveExtraTask', true);
         xhr.setRequestHeader("X-CSRFToken", csrfToken);
         xhr.setRequestHeader('Content-Type', 'application/json');
