Add tooltips for Badges

--- a/SinglePage/templates/cards/imi_main.html
+++ b/SinglePage/templates/cards/imi_main.html
@@ -5,9 +5,9 @@
            Questionnaire 2
             <div id="sticky_badge" class="sticky11 fixed-header" style="top: 86px">
                 <p style="text-align: center;">Badges</p>
-                <img src="{% static "img/silverBadge.png" %}" alt="" width="80">
+                <a data-toggle="tooltip" title="Good Performance"><img src="{% static "img/silverBadge.png" %}" alt=""  width="80"></a>
                 <br>
-                <img src="{% static "img/goldBadge.png" %}" alt="" width="80">
+                <a data-toggle="tooltip" title="Extraordinary Performance"><img src="{% static "img/goldBadge.png" %}" alt=""  width="80"></a>
             </div>
         </div>
         <div class="progress">
@@ -27,8 +27,8 @@
         </div>
         <div id="fixed_footer_badge" class="text-white">
             <div style="margin-left: 2%">Badges:
-                <img src="{% static "img/silverBadge.png" %}" alt="" width="40px" >
-                 <img src="{% static "img/goldBadge.png" %}" alt="" width="40px">
+                <a data-toggle="tooltip" title="Good Performance"><img src="{% static "img/silverBadge.png" %}" alt="" width="40px" ></a>
+                <a data-toggle="tooltip" title="Extraordinary Performance"><img src="{% static "img/goldBadge.png" %}" alt="" width="40px" ></a>
             </div>
         </div>
     </div>
