--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -130,7 +130,7 @@
                 </div>
                 <div id="sticky_badge" class="sticky10 fixed-header" style="top:84px">
                     <p style="text-align: center;">Badges</p>
-                    <img src="{% static "img/silverBadge.png" %}" alt=""  width="80">
+                    <a data-toggle="tooltip" title="Good Performance"><img src="{% static "img/silverBadge.png" %}" alt=""  width="80"></a>
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
         </div>
         <div id="fixed_footer_badge" class="text-white">
             <div style="margin-left: 2%">Badges:
-                <img src="{% static "img/silverBadge.png" %}" alt="" width="40px" >
+                <a data-toggle="tooltip" title="Good Performance"><img src="{% static "img/silverBadge.png" %}" alt="" width="40px" ></a>
             </div>
         </div>
     </div>
