Change study duration

--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -5,7 +5,7 @@
     <p class="card-text">
         Thank you for participating in our study. In this survey, we would like to assess your experience while performing different tasks.
         This survey consists of two parts. In each part, you have to solve 8 tasks, followed by a questionnaire.
-        It will take about 15-20 minutes to complete the survey. The goal of the study is to determine your performance and experience while completing the tasks. <br><br>
+        It will take about 20 minutes to complete the survey. The goal of the study is to determine your performance and experience while completing the tasks. <br><br>
 
         Your data will be stored and processed anonymously.
         More information on data protection can be found in the <a href="#" data-toggle="modal" data-target="#exampleModal">Data Protection Notice</a>.
